<resources>
    <string name="app_name">Bakio</string>
    <string name="ranking">Ranking</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="image_button_description">Boton de una torre como imagen </string>
    <string name="reproducir">Reproducir</string>
    <string name="pausar">Pausar</string>
    <string name="exit_button_description">Botón para salir</string>
    <string name="corregir_button_desc">Corregir respuesta</string>
    <string name="siguiente_button_desc">Ir a la siguiente pregunta</string>
    <string name="volver_button_desc">Volver al inicio</string>
    <string name="siguiente_actividad">Siguiente Actividad</string>
    <string name="hola">¡Hola amigos! ¡Bienvenidos a Bakio!</string>
    <string name="imagen_sonrisa">Imagen de bienvenida con una sonrisa</string>
    <string name="intro_expli">Soy Lanper, el personaje de las fiestas de Bakio, y hoy os guiaré por sus lugares y costumbres más importantes. Durante el recorrido, jugaremos en cada parada para hacer la visita más divertida y educativa. ¡Será una experiencia increíble!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="mapa">Mapa</string>
    <string name="titu_arrastrar">ANARRU EGUNA</string>
    <string name="expli_arrastrar">El Carnaval de Bakio destaca por sus personajes únicos, como Anarrua, símbolo del festejo, y los gnomos que infunden misterio. Entre bailes tradicionales como el \'Anarruen octocoa\' y rituales como el juicio y quema de Joseostu, se combinan tradición, magia y diversión para ahuyentar los males y celebrar la comunidad.</string>
    <string name="jugar">Jugar</string>
    <string name="titu_bela">VELAS CRUZADAS CONTRA EL VIENTO</string>
    <string name="expli_bela">Hace años, los piratas libraron batallas en el mar, dejando barcos destruidos y hundidos. En Bakio, un yate pirata se hundió en el puerto, inspirando años después a José Ramón Anda a crear una escultura azul que representa el mar y ese yate. Incluso el peñón de Bakio evoca la forma de un yate en honor a esa historia.</string>
    <string name="titu_gaztelu">San Juan de Gaztelugatxe</string>
    <string name="expli_gaztelu">La capilla de Gaztelugatxe, construida probablemente en el siglo XII, ha sido escenario de asedios, saqueos y ataques. Saqueadores y corsarios destruyeron bienes y lanzaron objetos al acantilado.</string>
    <string name="expli_kahoot">Bueno, bueno… eso es todo, y ahora para terminar con todo, ¡vamos a hacer una serie de preguntas con todo lo que hemos aprendido!</string>
    <string name="titu_pelaio">SAN PELAIO ERMITA</string>
    <string name="expli_pelaio">La ermita de San Pelaio, en Bakio, es una de las iglesias románicas más antiguas de Bizkaia. Construida con gruesos muros de piedra, ha resistido el paso del tiempo y conserva su planta original, aunque ha sido restaurada. Su elemento más destacado es el ábside con una ventana decorada con motivos vegetales y geométricos, reflejo del arte medieval.</string>
    <string name="titu_lanper">LANPER</string>
    <string name="expli_lanper">En Bakio, las fiestas de San Joan Doloza, del 28 al 31 de agosto, tienen como protagonista a \'Lanper\', una lámpara simbólica que participa en desfiles y eventos. El resto del año descansa en el ayuntamiento.</string>
    <string name="titu_txakolina">TXAKOLINA</string>
    <string name="expli_txakolina">El txakolín es un vino típico del País Vasco, elaborado con uvas de viñedos montañosos y almacenado en barricas de madera llamadas \"kupelas\". En Bakio, destacan varias bodegas y el Museo del Txakolí, que narra su historia y curiosidades. Solo puede disfrutarse a partir de los 18 años.</string>
    <string name="titu_martxitako">MATXITXAKO ITSASARGIA</string>
    <string name="expli_martxitako">El faro de Matxitxak, de 20 metros de altura y situado a 122 metros sobre el nivel del mar, emite señales luminosas para guiar a los barcos, siendo visible a 30 millas náuticas. Originalmente, los faros eran operados por fareros, pero ahora la mayoría son automáticos gracias a la tecnología moderna. Actualmente, existen menos de 1500 faros en funcionamiento en el mundo.</string>
    <string name="fin">FIN DEL JUEGO</string>
    <string name="titu_act_gaztelu">Adivina la respuesta correcta</string>
    <string name="pregunta_gaztelu">¿Cuántas escaleras tiene Doniene de Gaztelugatxe?</string>
    <string name="pregunta_anterior">Pregunta anterior</string>
    <string name="siguiente_pregunta">Siguiente pregunta</string>
    <string name="comprobar_respuestas">Comprobar respuestas</string>
    <string name="volver">Volver</string>
    <string name="titu_final_resultados">Resultados</string>
    <string name="fin_del_juego_boton">Fin del juego</string>
    <string name="actividad_final_boton">Actividad Final</string>
    <string name="titu_bienvenido_al_juego">¡Bienvenido al Juego!</string>
    <string name="titu_registro">Introduce usuario y contraseña</string>
    <string name="nombre_regis">Nombre</string>
    <string name="contra_regis">Contraseña</string>
    <string name="registrarse_boton">Registrarse</string>
    <string name="boton_corregi_resp">Corregir</string>
    <string name="titu_act_pelaio">San pelaio</string>
    <string name="titu_act_wally">ENCUENTRA LAS TRES TORRES</string>
    <string name="selecciona_el_idioma">Selecciona el idioma</string>
    <string name="info_desarro">Información de los desarrolladores</string>
    <string name="idioma_cambiado">Idioma cambiado correctamente</string>
    <string name="juego_completado">¡Juego completado!</string>
    <string name="intenta_nuevo">¡Intenta de nuevo!</string>
    <string name="respuesta_correcta">¡Respuesta Correcta!</string>
    <string name="respuesta_incorrecta">Respuesta Incorrecta.</string>
    <string name="non_bizi_da_lanper">¿Dónde vive Lanper?</string>
    <string name="udaletxean">En el ayuntamiento</string>
    <string name="etxean">En casa</string>
    <string name="itsasoan">En el mar</string>
    <string name="kalean">En la calle</string>
    <string name="non_ikusi">¿Dónde podemos ver a Lanper?</string>
    <string name="igerilekuan">En la piscina</string>
    <string name="herriko_plazan">En la plaza del pueblo</string>
    <string name="lagunekin_kafea_hartzen">Tomando café con amigos</string>
    <string name="zer_dago_gaztelugatxen">¿Qué hay en Gaztelugatxe?</string>
    <string name="ermita">Una ermita</string>
    <string name="altxorra">Un tesoro</string>
    <string name="taberna_bat">Un bar</string>
    <string name="lapurrak">Ladrones</string>
    <string name="nondik_dator_txakolina">¿De dónde proviene el txakoli?</string>
    <string name="mahatsetatik">De las uvas</string>
    <string name="sagarretik">De las manzanas</string>
    <string name="platanotik">De los plátanos</string>
    <string name="ahabietatik">De los arándanos</string>
    <string name="Txakolinaren_museoan">¿En el Museo del Txakoli se hace y se bebe txakoli?</string>
    <string name="gezurra">Falso</string>
    <string name="egia">Verdadero</string>
    <string name="zer_da_anarrua">¿Qué es Anarrua?</string>
    <string name="inauterietako_pretsonaia_bat">Un personaje de carnaval</string>
    <string name="mamu_bat">Un fantasma</string>
    <string name="bakioko_alkatea">El alcalde de Bakio</string>
    <string name="zein_dantza_egiten_da_bakion">¿Qué danza se baila en Bakio?</string>
    <string name="anarruaren_zortzikoa">Anarruaren zortzikoa</string>
    <string name="anarruren_banakoa">Anarruren banakoa</string>
    <string name="anarruaren_binakakoa">Anarruaren binakakoa</string>
    <string name="anarruaren_launakakoa">Anarruaren launakakoa</string>
    <string name="san_pelaio_ermita_harriz_eraikita_dago">¿La ermita de San Pelaio está construida en piedra?</string>
    <string name="zenbat_neurtzen_du_matxitxakoko_itsasargiak">¿Cuánto mide el faro de Matxitxako?</string>
    <string name="bakioko_bela_gurutzatuak_zer_isladatzen_du">¿Qué representa la escultura de las velas cruzadas en Bakio?</string>
    <string name="piraten_itsasontzia_ondoratu_zela">Que un barco pirata se hundió</string>
    <string name="piratak_bakiora_iritsi_ziren_eguna">El día en que llegaron los piratas a Bakio</string>
    <string name="piratek_bakion_lapurtu_zuten_garaia">La época en la que los piratas robaron en Bakio</string>
    <string name="ez_dauka_esanahirik">No tiene significado</string>
    <string name="por_favor_selecciona_una_respuesta">Por favor, selecciona una respuesta.</string>
    <string name="debes_llegar_al_punto_actual_para_continuar">Debes llegar al punto actual para continuar</string>
    <string name="felicidades">¡Felicidades!</string>
    <string name="has_encontrado_todas_las_palabras">Has encontrado todas las palabras.</string>
    <string name="uvas_recogidas_y_llevadas_a_la_caja">¡Uvas recogidas y llevadas a la caja!</string>
    <string name="arrastra_las_uvas_hacia_los_pies_para_continuar">Arrastra las uvas hacia los pies para continuar.</string>
    <string name="pisando_uvas_sigue_tocando">¡Pisando uvas! Sigue tocando...</string>
    <string name="las_uvas_han_sido_prensadas_y_llevadas_al_barril">Las uvas han sido prensadas y llevadas al barril.</string>
    <string name="primero_debes_recoger_las_uvas_y_llevarlas_a_la_caja">Primero debes recoger las uvas y llevarlas a la caja!</string>
    <string name="ha_pasado_1_a_o_el_txakoli_est_listo_para_embotellar">Ha pasado 1 año. El txakoli está listo para embotellar.</string>
    <string name="primero_pisa_las_uvas_y_gu_rdalas_en_el_barril">¡Primero pisa las uvas y guárdalas en el barril!</string>
    <string name="actividad_completada">Actividad completada</string>
    <string name="jaietan">En las fiestas</string>
    <string name="total_aciertos">"Total aciertos: "</string>
    <string name="total_de_fallos">"Total de fallos: "</string>
    <string name="el_porcentaje_de_aciertos_es">"El porcentaje de aciertos es: "</string>
</resources>