<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo">

    <!-- Título centrado -->
    <TextView
        android:id="@+id/tituloRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titu_registro"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium" />

    <!-- Campo de Nombre -->
    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/nombre_regis"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textColorHint="#000000"/>

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:hint="@string/contra_regis"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textColorHint="#000000" />

    <!-- Botón de Registrar -->
    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/registrarse_boton" />

    <!-- Animación de Carga (solo la animación) -->
    <ImageView
        android:id="@+id/loadingAnimation"
        android:layout_width="175dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />
</LinearLayout>
