<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/fondo">

    <!-- Título -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hola"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <!-- Imagen -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/sonrisa"
        android:contentDescription="@string/imagen_sonrisa"
        android:layout_marginBottom="16dp"/>

    <!-- Explicación -->
    <TextView
        android:id="@+id/explanationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_expli"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:lineSpacingExtra="4dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <!-- Barra de Progreso del Audio -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <SeekBar
            android:id="@+id/audioSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <!-- Tiempo actual y duración -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/currentTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/totalTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:gravity="end"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Botones de control de audio -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/play"
            android:src="@drawable/play"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/pause"
            android:contentDescription="@string/pause"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginEnd="8dp"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/btn_reiniciar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/reiniciar"
            android:contentDescription="@string/reiniciar"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="centerInside" />
    </LinearLayout>

    <!-- Botón para ir al mapa de Bakio -->
    <ImageButton
        android:id="@+id/ir_mapa"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/mapa"
        android:contentDescription="@string/mapa"
        android:layout_marginTop="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="centerInside" />

</LinearLayout>
