<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/fondo_verde">

    <!-- Título del juego -->
    <TextView
        android:id="@+id/tituloJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Adivina la respuesta correcta"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Cuántas escaleras tiene Doniene de Gaztelugatxe?"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/respuestas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="241"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="368"
            android:textColor="@color/black" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/corregirBtn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/corregir"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/corregir_button_desc"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_volver"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/volver"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/volver_button_desc"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/siguienteButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/siguiente"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/siguiente_button_desc"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="20sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="202dp"
        android:visibility="gone" />
</LinearLayout>
